# jupyter-ai-tools-exploration

./: .copier-answers.yml  .gitignore  LICENSE  README.md  RELEASE.md  conftest.py  install.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
jupyter-config/server-config/: jupyter_ai_tools_exploration.json
jupyter_ai_tools_exploration/: __init__.py  agent.py  handlers.py  persona.py  tools.py
jupyter_ai_tools_exploration/tests/: __init__.py  test_handlers.py
